syntax = "proto3";

package proto;

// Tell protoc where to generate the Go code:
// Replace <your-module-path> with the module path from your go.mod
option go_package = "adaptive-geo-distributed-database/proto;proto";

message PutRequest {
  string key   = 1;
  bytes  value = 2;
}

message PutReply {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetReply {
  bytes value = 1;
  bool  found = 2;
}

service KV {
  rpc Put (PutRequest) returns (PutReply);
  rpc Get (GetRequest) returns (GetReply);
}
